Day 7:- Exception Handeling, Code clean up and Spring Security Added in Vibe Studio Project